# phycore

./: CMakeLists.txt  LICENSE  README.md
contrib/: CMakeLists.txt
include/math/: mathutil.h  trait.h
include/phycore/: PhycoreBody.h  PhycoreCollisionInfo.h  PhycoreMaterial.h  PhycoreShape.h  PhycoreWorld.h  phycore.h
include/phycore/math/: mat2.h  mat3.h  mat4.h  math.h  mathfwd.h  mathutil.h  quat.h  vector2.h  vector3.h  vector4.h
source/: CMakeLists.txt
source/phycore/: CMakeLists.txt  PhycoreBody.cpp  PhycoreMaterial.cpp  PhycoreShape.cpp  PhycoreWorld.cpp
source/phycore-math/: CMakeLists.txt  mathutil.cpp
tests/: CMakeLists.txt
tools/: CMakeLists.txt
tools/phycore-demo/: CMakeLists.txt  main.cpp
