SET(LIB_NAME math)
SET(LIB_OUTNAME phycore-${LIB_NAME})

SET(HEADER_PATH ${PHYCORE_PATH_HEADER}/${LIB_NAME})
SET(SOURCE_PATH ${PHYCORE_PATH_SOURCE}/${LIB_OUTNAME})

SET(MATH_LIST
	${HEADER_PATH}/vector2.h
	${HEADER_PATH}/vector3.h
	${HEADER_PATH}/vector4.h
	${HEADER_PATH}/mat2.h
	${HEADER_PATH}/mat3.h
	${HEADER_PATH}/mat4.h
	${HEADER_PATH}/quat.h
	${HEADER_PATH}/math.h
	${HEADER_PATH}/trait.h
	${HEADER_PATH}/mathfwd.h
    ${HEADER_PATH}/mathutil.h
    ${SOURCE_PATH}/mathutil.cpp
)
SOURCE_GROUP(${LIB_NAME} FILES ${MATH_LIST})

ADD_DEFINITIONS(-DPHYCORE_BUILD_DLL_EXPORT)
ADD_LIBRARY(${LIB_OUTNAME} STATIC ${MATH_LIST})

SET_TARGET_ATTRIBUTE(${LIB_OUTNAME} "core")