SET(LIB_NAME phycore)

SET(HEADER_PATH ${PHYCORE_PATH_HEADER})
SET(SOURCE_PATH ${PHYCORE_PATH_SOURCE}/${LIB_NAME})

SET(PHYCORE_LIST
)
SOURCE_GROUP("system\\app" FILES ${PHYCORE_LIST})

SET(BASE_FEATURES_LIST
    ${HEADER_PATH}/transform_component.h
    ${SOURCE_PATH}/transform_component.cpp
    ${HEADER_PATH}/game_base_features.h
    ${SOURCE_PATH}/game_base_features.cpp
)
SOURCE_GROUP("system\\base" FILES ${BASE_FEATURES_LIST})

SET(INPUT_FEATURES_LIST
    ${HEADER_PATH}/input_feature.h
    ${SOURCE_PATH}/input_feature.cpp
)
SOURCE_GROUP("system\\input" FILES ${INPUT_FEATURES_LIST})

SET(GUI_FEATURES_LIST
    ${HEADER_PATH}/gui_feature.h
    ${SOURCE_PATH}/gui_feature.cpp
)
SOURCE_GROUP("system\\gui" FILES ${GUI_FEATURES_LIST})

SET(TIMER_FEATURES_LIST
    ${HEADER_PATH}/timer_feature.h
    ${SOURCE_PATH}/timer_feature.cpp
)
SOURCE_GROUP("system\\timer" FILES ${TIMER_FEATURES_LIST})

SET(IO_FEATURES_LIST
    ${HEADER_PATH}/io_feature.h
    ${SOURCE_PATH}/io_feature.cpp
)
SOURCE_GROUP("system\\io" FILES ${IO_FEATURES_LIST})

INCLUDE_DIRECTORIES(${PHYCORE_PATH_DEPENDENCIES}/eigen)

ADD_DEFINITIONS(-DPHYCORE_BUILD_DLL_EXPORT)
ADD_LIBRARY(${LIB_NAME} SHARED 
    ${PHYCORE_LIST} 
    ${BASE_FEATURES_LIST} 
    ${INPUT_FEATURES_LIST} 
    ${GUI_FEATURES_LIST}
    ${TIMER_FEATURES_LIST}
    ${IO_FEATURES_LIST}
)

TARGET_LINK_LIBRARIES(${LIB_NAME} PRIVATE phycore-math)
TARGET_LINK_LIBRARIES(${LIB_NAME} PRIVATE eigen)

SET_TARGET_ATTRIBUTE(${LIB_NAME} "phycore")