SET(LIB_NAME phycore)

SET(HEADER_PATH ${PHYCORE_PATH_HEADER})
SET(SOURCE_PATH ${PHYCORE_PATH_SOURCE}/${LIB_NAME})

SET(PHYCORE_LIST
)
SOURCE_GROUP("system\\app" FILES ${PHYCORE_LIST})

SET(BASE_FEATURES_LIST
    ${HEADER_PATH}/transform_component.h
    ${SOURCE_PATH}/transform_component.cpp
    ${HEADER_PATH}/game_base_features.h
    ${SOURCE_PATH}/game_base_features.cpp
)
SOURCE_GROUP("system\\base" FILES ${BASE_FEATURES_LIST})

INCLUDE_DIRECTORIES(${PHYCORE_PATH_DEPENDENCIES}/eigen)

ADD_DEFINITIONS(-DPHYCORE_BUILD_DLL_EXPORT)
ADD_LIBRARY(${LIB_NAME} SHARED 
    ${PHYCORE_LIST}
)

TARGET_LINK_LIBRARIES(${LIB_NAME} PRIVATE phycore-math)

SET_TARGET_ATTRIBUTE(${LIB_NAME} "phycore")