SET(LIB_NAME phycore)

SET(HEADER_PATH ${PHYCORE_PATH_HEADER})
SET(SOURCE_PATH ${PHYCORE_PATH_SOURCE}/${LIB_NAME})

SET(PHYCORE_LIST
    ${HEADER_PATH}/PhycoreBody.h
    ${SOURCE_PATH}/PhycoreBody.cpp
    ${HEADER_PATH}/PhycoreWorld.h
    ${SOURCE_PATH}/PhycoreWorld.cpp
    ${HEADER_PATH}/PhycoreMaterial.h
    ${SOURCE_PATH}/PhycoreMaterial.cpp
    ${HEADER_PATH}/PhycoreShape.h
    ${SOURCE_PATH}/PhycoreShape.cpp
    ${HEADER_PATH}/PhycoreCollisionInfo.h
)
SOURCE_GROUP("system\\core" FILES ${PHYCORE_LIST})

INCLUDE_DIRECTORIES(${PHYCORE_PATH_DEPENDENCIES}/eigen)

ADD_DEFINITIONS(-DPHYCORE_BUILD_DLL_EXPORT)
ADD_LIBRARY(${LIB_NAME} STATIC 
    ${PHYCORE_LIST}
)

TARGET_LINK_LIBRARIES(${LIB_NAME} PRIVATE phycore-math)

SET_TARGET_ATTRIBUTE(${LIB_NAME} "phycore")