SET(LIB_NAME demo)
SET(LIB_OUTNAME phycore-${LIB_NAME})

SET(HEADER_PATH ${PHYCORE_PATH_HEADER})
SET(SOURCE_PATH ${PHYCORE_PATH_TOOLS}/${LIB_NAME})

SET(PLATFORM_LIST
    ${SOURCE_PATH}/main.cpp
)
SOURCE_GROUP(${LIB_NAME} FILES ${PLATFORM_LIST})

ADD_EXECUTABLE(${LIB_OUTNAME} ${PLATFORM_LIST})

TARGET_LINK_LIBRARIES(${LIB_OUTNAME} PRIVATE phycore)

SET_TARGET_ATTRIBUTE(${LIB_OUTNAME} "tools")